--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,107 +1,185 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
+@import url('https://fonts.googleapis.com/css?family=Montserrat+Subrayada|Ubuntu:400,500,700&display=swap');
 
 * {
-  box-sizing: border-box;
-  padding: 0;
   margin: 0;
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-a {
-  color: inherit;
+  padding: 0;
+  list-style: none;
+  font-family: 'Roboto', sans-serif;
+  box-sizing: border-box;
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+body {
+  background: #E0E0E0;
+  width: 100%;
+  height: 100%;
+  padding: 0.5em;
+}
+
+.wrapper .top_navbar {
+  width: 100%;
+  height: 140px;
+  display: flex;
+  align-items: center;
+  position: fixed;
+  top: 0;
+}
+
+.wrapper .top_navbar .logo {
+  width: 250px;
+  height: 100%;
+  background: #E0E0E0;
+  display: flex;
+  padding: 20px 33px;
+}
+
+.wrapper .top_navbar .logo .image {
+  display: block;
+  width: 6em;
+  height: 6em;
+}
+
+.wrapper .top_navbar .top_menu {
+  width: calc(100% - 250px);
+  height: 100%;
+  background: #E0E0E0;
+  padding: 0 40px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.home_link {
+  
+  font-style: normal;
+  font-weight: 700;
+  font-size: xx-large;
+  margin-left: -30px;
+}
+
+.wrapper .top_navbar .right_info {
+  display: flex;
+  align-items: center;
+}
+
+.wrapper .top_navbar .right_info .icon_wrap {
+  padding: 8px 15px;
+  color: #fff;
+  cursor: pointer;
+}
+
+.bell {
+  width: 20px;
+  height: 20px;
+}
+
+.placeholder-profile {
+  width: 40px;
+  height: 40px;
+}
+
+.main_body .sidebar_menu {
+  position: fixed;
+  left: 0;
+  width: 200px;
+  height: 100%;
+  transition: all 0.3s linear;
+}
+
+.main_body .sidebar_menu .inner__sidebar_menu {
+  position: relative;
+  padding-top: 80px;
+}
+
+.main_body .sidebar_menu ul li a {
+  font-size: 18px;
+  padding: 18px 35px;
+  display: block;
+  white-space: nowrap;
+  border-radius: 20px;
+  color: #535353;
+}
+
+.list-tab {
+  display: flex;
+  align-items: center;
+}
+
+.nav-icons {
+  height: 20px;
+  width: 20px;
+  margin-top: 3px;
+}
+
+.main_body .sidebar_menu ul li a .icon {
+  margin-right: 8px;
+}
+
+.main_body .sidebar_menu ul li a span {
+  display: inline-block;
+}
+
+.main_body .sidebar_menu ul li a:hover {
+  background: #D3D3D3;
+  color: black;
+}
+
+.main_body .sidebar_menu ul li a.active {
+  background: #535353;
+  color: #fff;
+}
+
+.main_body .container {
+  width: calc(100% - 250px);
+  margin-top: 50px;
+  margin-left: 250px;
+  transition: all 0.3s linear;
+  height: 100%;
+}
+
+.main_body .container .item_wrap {
+  padding-top: 80px;
+  display: flex;
+  margin-bottom: 20px;
+  align-items: stretch;
+  height: 100%;
+}
+
+.main_body .container .item_wrap .item {
+  background: #fff;
+  border: 1px solid #e0e0e0;
+  padding: 25px;
+  font-size: 14px;
+  line-height: 22px;
+  border-radius: 25px;
+}
+
+.main_body .container .item_wrap .item:first-child {
+  margin-right: 10px;
+  width: 60%;
+}
+
+.main_body .container .item_wrap .item2 {
+  flex: 1;
+}
+.wrapper.active .sidebar_menu {
+  width: 100px;
+}
+
+.wrapper.active .hamburger .fa-long-arrow-alt-right {
+  display: block;
+}
+
+.wrapper.active .hamburger .fa-long-arrow-alt-left {
+  display: none;
+}
+
+.wrapper.active .sidebar_menu ul li a .list {
+  display: none;
+  color: #505050;
+}
+
+.wrapper.active .main_body .container {
+  width: calc(100% - 100px);
+  margin-left: 100px;
 }
