--- a/pages/components/Navbar2.module.css
+++ b/pages/components/Navbar2.module.css
@@ -16,8 +16,13 @@
     border-radius: 30px;
     flex: 1;
     display: flex;
-    align-items: center;
+    /* align-items: center; */
     justify-content: center;
+    overflow-y: auto;
+    padding-right: 20px;
+    padding-left: 20px;
+    padding-top: 145px;
+
 }
 
 .sidebar {
