added login and register pages

--- a/pages/components/Navbar2.module.css
+++ b/pages/components/Navbar2.module.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
+
+
 .parent {
     position: absolute;
     width: 100%;
@@ -21,9 +24,11 @@
     overflow-y: auto;
     padding-right: 20px;
     padding-left: 20px;
-    padding-top: 145px;
+    padding-top: 15px;
 
 }
+
+.logo
 
 .sidebar {
     position: relative;
@@ -32,6 +37,7 @@
     width: 20%;
     justify-content: center;
 }
+
 
 @media (max-width: 700px) {
     .sidebar {
@@ -54,10 +60,12 @@
     position: absolute;
     height: 35px;
     top: calc(50% - 35px/2 - 129.5px);
-    font-family: 'Poppins';
+    font-family: 'Roboto', sans-serif;
     font-style: normal;
     font-weight: 600;
+    padding: 15px 20px;
     line-height: 35px;
+    
     /* identical to box height, or 140% */
 }
 
@@ -66,28 +74,30 @@
 }
 
 .sidebar ul li a {
-    font-size: 18px;
-    padding: 10px 30px;
-    right: 5%;
+    font-size: 19px;
+    padding: 15px 20px;
     display: block;
     white-space: nowrap;
+    font-family: 'Roboto', sans-serif;
+    text-align: center;
+    border-radius: 7px;
     color: #FFFFFF;
 }
 
 .inner_sidebar ul li a:hover {
-    color: #535353;
+    background-color: #bab3b3;
+    color: black;
 }
 
 .inner_sidebar ul li a.active {
-    background: #535353;
-    color: #fff;
+    background: #bab3b3;
 }
 
 .image {
     position: absolute;
-    width: 80.55px;
-    height: 73.09px;
+    width: 120.55px;
+    height: 120.09px;
     /* /* left: 8px; */
     top: -125px;
-    left: 35px;
+    left: 30%; 
 }
