--- a/pages/components/Navbar2.module.css
+++ b/pages/components/Navbar2.module.css
@@ -12,21 +12,18 @@
 .content {
     position: absolute;
     left: 20%;
-    right: 1.39%;
+    right: 0;
     top: 2.22%;
     bottom: 2.22%;
     background: #FFFFFF;
     border-radius: 30px;
     flex: 1;
     display: flex;
-    /* align-items: center; */
+    align-items: center;
     justify-content: center;
     overflow-y: auto;
-    padding-right: 20px;
-    padding-left: 20px;
-    padding-top: 15px;
-
-}
+    padding: 20px;
+  }
 
 .logo
 
