--- a/pages/login/login.module.css
+++ b/pages/login/login.module.css
@@ -1,7 +1,7 @@
 .logincontainer {
     align-items: center;
     justify-content: center;
-    padding-top: 145px;
+    /* padding-top: 145px; */
   }
   
   .header {
