--- a/pages/components/Navbar2.module.css
+++ b/pages/components/Navbar2.module.css
@@ -5,7 +5,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background: #101010;
+    background: #000000;
     display: flex;
 }
 
@@ -22,10 +22,13 @@
     align-items: center;
     justify-content: center;
     overflow-y: auto;
-    padding: 20px;
+    padding: 0px;
   }
 
-.logo
+.logo{
+    margin-bottom: 20px;
+
+}
 
 .sidebar {
     position: relative;
